Fixed styling to personalize the app and make it readable in both light and dark mode.

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ input[type="number"] {
   padding: 8px 6px 8px 10px;
   border-radius: 4px;
   outline: none;
-  border: 1px solid #ccc;
+  border: 1px solid #7fc05c;
   font-size: 14px;
   line-height: 20px;
   align-self: center;
@@ -56,7 +56,7 @@ input[type="number"] {
 .suggestions>li {
   text-align: left;
   padding: 8px 6px 8px 10px;
-  background-color: #eee;
+  background-color: #7fc05c;
   cursor: default;
 }
 
@@ -66,14 +66,14 @@ input[type="number"] {
 }
 
 .suggestions>li:hover {
-  background-color: #bcdcdb;
+  background-color: #858585;
 }
 
 .event {
   padding: 10px 10px 35px;
   margin-bottom: 10px;
   text-align: left;
-  border: 1px solid #ccc;
+  border: 1px solid #7fc05c;
   border-radius: 4px;
   position: relative;
 }
@@ -86,6 +86,7 @@ input[type="number"] {
   border-radius: 4px;
   outline: none;
   cursor: pointer;
+  background-color: #7fc05c;
 }
 
 .event-details {
